Some changes & fixes

--- a/CloudRPC/sources/style.css
+++ b/CloudRPC/sources/style.css
@@ -3,11 +3,11 @@ body {
     color: white;
     font-family: monospace;
     text-align: center;
-    transition: opacity 1s linear;
+    transition: opacity 500ms linear;
 }
 
 #info p {
-    white-space: nowrap; 
+    white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
 }
